--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.prgguru.example"
+    package="com.dlka.shopwareclient"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -15,23 +15,15 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name="com.prgguru.example.RegisterActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name="com.prgguru.example.LoginActivity"
-            android:label="@string/title_activity_login" >
+            android:name="com.dlka.shopwareclient.LoginActivity"
+            android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.prgguru.example.HomeActivity"
-            android:label="@string/title_activity_home" >
         </activity>
     </application>
 
