--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
     defaultConfig {
         applicationId 'com.dlka.shopwareclient'
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 19
     }
     buildTypes {
@@ -19,8 +19,12 @@ android {
 }
 
 dependencies {
-    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
-    compile 'com.android.support:appcompat-v7:19.1.0'
-    compile 'com.android.support:support-v4:19.1.0'
     compile files('libs/android-async-http-1.4.4.jar')
+    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.easing:library:1.0.1@aar'
+    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
+    compile 'com.jenzz:materialpreference:1.3'
 }
